# deploy-bot

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.yaml.example
.cargo/: config.toml
.github/workflows/: release.yml
openspec/changes/archive/2026-03-11-deploy-queue-dedup/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-11-docker-execute/: README.md  tasks.md
openspec/changes/archive/2026-03-11-unit-test/: README.md  tasks.md
openspec/changes/archive/2026-03-12-add-default-install-commands/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-12-config-decentralize/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-12-deploy-bot-web-ui/: design.md  proposal.md  tasks.md
openspec/changes/rust-deploy-bot/: proposal.md
openspec/specs/deployment-logs/: spec.md
openspec/specs/replay-update/: spec.md
scripts/: cleanup_test_data.py  deploy-bot.init  deploy-bot.service  insert_test_data.py  update-direct.sh  update-service.sh  update-systemd.sh
src/: cli.rs  error.rs  logging.rs  main.rs  self_update.rs
src/config/: mod.rs
src/database/: mod.rs
src/database/migrations/: V1__initial.sql  mod.rs
src/deploy/: executor.rs  manager.rs  mod.rs
src/git/: mod.rs  operations.rs
src/installer/: mod.rs  tasks.rs
src/project_config/: mod.rs
src/runner/: mod.rs  task.rs
src/web_ui/: mod.rs
src/webhook/: handler.rs  middleware.rs  mod.rs
src/websocket/: mod.rs
templates/: base.html  detail.html  list.html
tests/: unit.rs
workspace/test-project/: .deploy.yaml
(+82 files in other folders)
